// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainHeader /> renders correctly for large screens 1`] = `
<header
  className="MainHeader"
>
  <div
    className="Header__left-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        enabled={true}
        id="MainHeader__menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element MainHeader__logo"
    >
      logo
    </div>
    <div
      className="Header__element"
    >
      <Connect(SearchBar) />
    </div>
  </div>
  <div
    className="Header__right-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        enabled={true}
        id="MainHeader__settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</header>
`;

exports[`<MainHeader /> renders correctly for small screens 1`] = `
<header
  className="MainHeader"
>
  <div
    className="Header__left-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        enabled={true}
        id="MainHeader__menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element MainHeader__logo"
    >
      logo
    </div>
  </div>
  <div
    className="Header__right-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        enabled={true}
        id="MainHeader__search-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        enabled={true}
        id="MainHeader__settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</header>
`;
